minor changes
Signed-off-by: Roy Ash <roy.ash456@gmail.com>